--- a/package.json
+++ b/package.json
@@ -1,22 +1,25 @@
 {
   "name": "hile",
-  "version": "1.0.0",
+  "version": "1.0.31",
   "private": true,
   "scripts": {},
   "dependencies": {
+    "bcrypt-nodejs": "latest",
     "body-parser": "^1.14.1",
     "cookie-parser": "~1.3.5",
     "cors": "^2.7.1",
     "express": "^4.13.3",
+    "express-session": "~1.0.0",
+    "jade": "^1.11.0",
+    "method-override": "~1.0.0",
     "mongoose": "^4.3.1",
     "morgan": "^1.6.1",
     "multiparty": "^4.1.2",
+    "passport": "~0.1.17",
+    "passport-google-oauth": "~0.1.5",
+    "passport-local": "~0.1.6",
     "twilio": "^2.8.0",
-    "passport" : "~0.1.17",
-    "passport-local" : "~0.1.6",
-    "passport-google-oauth" : "~0.1.5",
-    "bcrypt-nodejs" : "latest",
-    "method-override": "~1.0.0",
-    "express-session": "~1.0.0"
+    "validator": "^4.7.1",
+    "nodemailer": "^2.0.0"
   }
 }
